# motpy

./: README.md  pyproject.toml
examples/: filter_coco_video.py
motpy/: __init__.py  model.py  tracker.py
