[tool.poetry]
name = "motpy-smoother"
version = "0.0.1"
description = "Motpy KalmanSmoother addon"
authors = ["kohei <koheitech001@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "motpy_smoother"}]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.24.2"
filterpy = "^1.4.5"
pycocotools = "^2.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
